Add free-page reporting, and make it a per-VM switch
Every VM was created with `--memballoon model=none`: fixed, real RAM and
no way for a guest to give any of it back. That is the right default for
one VM per friend on a roomy host, but this host now needs to carry more
configured RAM than it physically has, so the guests need a way to return
what they are not using.

The balloon comes back, but only in the direction that cannot hurt.
`--memory` is still passed alone, so `<memory>` and `<currentMemory>` come
out equal and the balloon starts empty: the guest boots with all of its RAM
and nothing ever takes any away. `freePageReporting='on'` is one-way — the
guest hands back pages already on its own free list, the host never asks.

This matters because the 2026-07-10 instability was not the balloon device
misbehaving. That policy booted guests at 4 GB `<currentMemory>` under a
16 GB `<memory>`, i.e. inflated by 12 GB, and nothing ever ran `setmem` to
give it back — so guests hit their own OOM killer inside an artificially
small box. Inflation was the bug; reporting is safe.

Since `<memballoon>` is per-domain, `vm-tui.py` can switch it on an
existing VM: the `e` form gains a Free-page reporting select and the table
gains a BALLOON column, both gated on `shut off` like the rest. There is no
virsh verb for it, so the TUI replaces the whole element in the inactive XML
and redefines — replacing rather than patching drops the now-invalid PCI
address, and it runs after the setmem/setvcpus steps because those rewrite
the stored XML.

Docs cover what reporting does not buy you, which matters more than what it
does: it never returns guest page cache, and the planning number stays the
sum of configured RAM. A new k3s/Java section spells out the worst case —
an idle JVM never GCs, so its heap is never uncommitted and there is nothing
to report — with host swap as the mechanism that needs no cooperation from
Java or k3s at all. Also corrected: do not lower vm.swappiness on a VM 